_sass/_pulumi.scss
/* ... */
#right-nav-block {
    position: absolute;
    right: 0;
    display: flex;
}

@media(max-width: $screen-md){
    #sign-in-button {
        display: none;
    }
}

$CENTER-WIDTH: 1400px;
$UTILITYBAR-HEIGHT: 45px;
$TOOLBAR-HEIGHT: 110px;
$TAB-GROUP-HEIGHT: 60px;
$MOBILE-WIDTH: 768px;

$code-font-family: Menlo,Monaco,Consolas,"Courier New",monospace;

/**
 * Colors
 */
// Define custom CSS styles for Pulumi webpages. This allow us to make dramatic
// changes to the color scheme without much churn.
$primary: #512668;  // primary purple
$primary2: #00acf2; // primary blue
$primary3: #2fc89f; // primary green
$primary4: #ee975c; // primary orange
$accent1: #f6e5ff; // light purple
$accent2: #e1f6ff; // light blue
$accent3: #3EC2F8; // bright blue
$accent4: #fbe5d7; // light orange

// Generate via:
// https://gist.github.com/chrsmith/692ea3833f2b48f121ad5515aff174ad
.brand                 {            color: $primary; }
.bg-brand              { background-color: $primary; }
.hover-brand:hover     {            color: $primary; }
.hover-bg-brand:hover  { background-color: $primary; }

.brand2                {            color: $primary2; }
.bg-brand2             { background-color: $primary2; }
.hover-brand2:hover    {            color: $primary2; }
.hover-bg-brand2:hover { background-color: $primary2; }

.brand3                {            color: $primary3; }
.bg-brand3             { background-color: $primary3; }
.hover-brand3:hover    {            color: $primary3; }
.hover-bg-brand3:hover { background-color: $primary3; }

.accent1                {            color: $accent1; }
.bg-accent1             { background-color: $accent1; }
.hover-accent1:hover    {            color: $accent1; }
.hover-bg-accent1:hover { background-color: $accent1; }

.accent2                {            color: $accent2; }
.bg-accent2             { background-color: $accent2; }
.hover-accent2:hover    {            color: $accent2; }
.hover-bg-accent2:hover { background-color: $accent2; }

// Remove the background color from Bootstrap's Jumptron class.
.pulumi-jumbotron {
    background-color: $accent3;
    margin-bottom: 1rem;
    border-radius: .3rem;
    padding: 2rem 1rem;
}

.little-jumbotron {
    background-color: $accent3;
    margin: 8px;
    border-radius: .3rem;
    padding: 8px;
}

.content-block {
    padding-top: 30px;
    padding-bottom: 120px;
    min-height: calc(100vh - 396px);
}

.button {
    padding: 16px;
    min-width: 120px;
    font-size: 14px;
    font-weight: bold;
    color: $primary2;
    background-color: #fff;
    border: 1px solid #007dbf;
}
.button:hover {
    background-color: #66deff;
}

.button.small {
    font-size: 12px;
    padding: 8px;
    margin-bottom: 10px;
}

.button.primary {
    color: #fff;
    background-color: $primary2;
}
.button.primary:hover {
    border: 1px solid #007dbf;
    background-color: #66deff;
}

// Don't have SVG icons default to black. Just use current text color.
svg {
    fill: currentColor;
}

.get-to-the-cloud {
    color: #333;
    font-size: 36px;
    margin: 48px 0 32px 0 !important;
}

.get-to-the-cloud-sub {
    color: #4a5960;
    font-size: 28px;
    margin: 32px 0 48px 0 !important;
}

.what-is-pulumi {
    color: #333;
    font-size: 18px;
    margin: 48px auto 0px auto;
    max-width: 960px;
}

.what-is-pulumi-cta {
    font-weight: 600;
}

.learn {
    color: #4a5960;
    border-radius: 2px;
    margin-top: 0px !important;
}

.curl-install {
    display: inline-block;
    font-size: 22px !important;
    font-family: $code-font-family;
    padding: 8px 32px;
    background-color: #eee;
    border-radius: 2px;
}

.docsToc {
    background: rgb(247,247,247);
    width: 250px;
    font-size: 13px;
    padding: 0 8px 8px 8px;
}

.docsToc::after {
    content: '';
    display: table;
    clear: both;
}

.docsContent {
    width: 100%;
    margin-right: auto;
}

@media (max-width: $MOBILE-WIDTH) {
    .docsContent {
        max-width: calc(100% - 32px);
    }
}
@media (min-width: $MOBILE-WIDTH) {
    /* On non-mobile, add some padding between the TOC and content. */
    .docsContent {
        padding-left: 24px;
        max-width: calc(100% - 290px);
    }
}

$palette-grey:
"250,250,250"
"245,245,245"
"238,238,238"
"224,224,224"
"189,189,189"
"158,158,158"
"117,117,117"
"97,97,97"
"66,66,66"
"33,33,33";

$palette-grey-50: nth($palette-grey, 1);
$palette-grey-100: nth($palette-grey, 2);
$palette-grey-200: nth($palette-grey, 3);
$palette-grey-300: nth($palette-grey, 4);
$palette-grey-400: nth($palette-grey, 5);
$palette-grey-500: nth($palette-grey, 6);
$palette-grey-600: nth($palette-grey, 7);
$palette-grey-700: nth($palette-grey, 8);
$palette-grey-800: nth($palette-grey, 9);
$palette-grey-900: nth($palette-grey, 10);

$color-black: "0,0,0";

$tab-highlight-color: unquote("rgb(#{$primary})") !default;
$tab-text-color: unquote("rgba(#{$color-black}, 0.54)") !default;
$tab-active-text-color: unquote("rgba(#{$color-black}, 0.87)") !default;
$tab-border-color: unquote("rgb(#{$palette-grey-300})") !default;

$layout-tab-font-size: 14px !default;

p {
    margin-bottom: 16px;
}

blockquote, blockquote p {
    color: #111;
    font-size: 14px;
}

pre {
    border-radius: 2px;
    font-size: 14px;
    line-height: 1.5;
    margin-bottom: 24px;
}

pre.highlight {
    border-radius: 2px !important;
}

h2, h3, h4 {
    margin-top: 24px;
}

h1 { font-size: 36px; font-weight: 500; }
h2 { font-size: 28px; font-weight: 500; }
h3 { font-size: 24px; font-weight: 500; }
h4 { font-size: 22px; font-weight: 500; }

.mdl-tabs {
    display: block;
    width: 100%;
}

.mdl-tabs__tab-bar {
    display         : flex;
    flex-direction  : row;
    justify-content : center;
    align-content   : space-between;
    align-items     : flex-start;

    height          : 48px;
    padding         : 0 0 0 0;
    margin          : 0;
    border-bottom   : 1px solid $tab-border-color;
}
/* ... */

